--- a/project1/index2.html
+++ b/project1/index2.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vivek - Web Developer</title>
+    <link href="./assets/css/styles.css" rel="stylesheet" />
+    <link rel="preload" as="image" href="./assets/images/me.jpg" />
+    <link rel="preload" as="image" href="./assets/images/image-mask.svg" />
   </head>
   <body></body>
 </html>
