navbar created for both mobile and web appliaction and given my name on it

--- a/project1/index2.html
+++ b/project1/index2.html
@@ -2,10 +2,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vivek - Web Developer</title>
+    <title>Vivek Biswakarma - Web Developer</title>
     <link href="./assets/css/styles.css" rel="stylesheet" />
     <link rel="preload" as="image" href="./assets/images/me.jpg" />
     <link rel="preload" as="image" href="./assets/images/image-mask.svg" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <a href="#" class="logo">Vivek Biswakarma</a>
+        <nav class="navbar" data-navbar>
+          <div class="navbar-top">
+            <a href="#" class="logo">Vivek Biswakarma</a>
+          </div>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
