created a button to close and toggle

--- a/project1/index2.html
+++ b/project1/index2.html
@@ -14,6 +14,7 @@
         <nav class="navbar" data-navbar>
           <div class="navbar-top">
             <a href="#" class="logo">Vivek Biswakarma</a>
+            <button class="navbar-close-btn" data-nav-toggler>Close</button>
           </div>
         </nav>
       </div>
