created a button and theme changer

--- a/project1/index2.html
+++ b/project1/index2.html
@@ -16,6 +16,20 @@
             <a href="#" class="logo">Vivek Biswakarma</a>
             <button class="navbar-close-btn" data-nav-toggler>Close</button>
           </div>
+          <ul class="navbar-list">
+            <li>
+              <a href="#" class="navbar-link">Home</a>
+            </li>
+            <li>
+              <a href="#" class="navbar-link">About</a>
+            </li>
+            <li>
+              <a href="#" class="navbar-link">Projects</a>
+            </li>
+            <li>
+              <a href="#" class="navbar-link">Content</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
