--- a/project1/index2.html
+++ b/project1/index2.html
@@ -27,10 +27,15 @@
               <a href="#" class="navbar-link">Projects</a>
             </li>
             <li>
-              <a href="#" class="navbar-link">Content</a>
+              <a href="#" class="navbar-link">Contact</a>
             </li>
           </ul>
+          <div class="theme-wrapper">
+            <button id="theme-btn" class="btn theme">Change Theme</button>
+          </div>
         </nav>
+        <button class="nav-open-btn" data-nav-toggler>Toggle Navbar</button>
+        <div class="overlay" data-nav-toggler data-overlay></div>
       </div>
     </header>
   </body>
